# kara-katas

./: .gitignore  BENCH.md  BENCHMARKS.md  BENCH_JSON.md  CLAUDE.md  PLAN.md  README.md  bench-baseline.json  bench-results.json
.github/workflows/: lint.yml
apps/: DEPLOY.md  sync-website.sh
apps/prism/: .gitignore  README.md  build.sh  index.html  prism.kara  prism.threads.wasm  serve.py  test_node.mjs  verify_browser.mjs
apps/prism/deploy/: _headers  index.html  prism.threads.wasm
apps/veil/: .gitignore  README.md  build.sh  index.html  test_node.mjs  veil.d.ts  veil.js  veil.kara  veil.wasm  verify_browser.mjs
apps/veil/deploy/: index.html  veil.js  veil.wasm
backend/supervised_echo/: README.md  main.kara
backend/todo-api/: README.md  main.kara
bespoke/utf8-codepoints/: README.md  utf8_codepoints.kara  utf8_codepoints.py  utf8_codepoints_chars.kara  utf8_codepoints_recursive.kara
bespoke/utf8-codepoints/bench/: bench.sh  results.json  utf8_codepoints.c  utf8_codepoints.kara  utf8_codepoints.py  utf8_codepoints.rs
bespoke/word-frequency/: README.md  word_frequency.kara
leetcode/1-100/1-two-sum/: README.md  brute_force.kara  brute_force.py  hash_map.kara  hash_map.py
leetcode/1-100/10-regular-expression-matching/: README.md  regex.kara  regex.py
leetcode/1-100/100-same-tree/: README.md  same_tree.kara  same_tree.py  same_tree_serial.kara
leetcode/1-100/101-symmetric-tree/: README.md  is_symmetric.kara  is_symmetric.py
leetcode/1-100/11-container-with-most-water/: README.md  container.kara  container.py
leetcode/1-100/11-container-with-most-water/bench/rayon/: Cargo.toml
leetcode/1-100/11-container-with-most-water/bench/rayon/src/: main.rs
leetcode/1-100/12-integer-to-roman/: README.md  greedy.kara  greedy.py
leetcode/1-100/121-best-time-to-buy-and-sell-stock/: README.md
leetcode/1-100/13-roman-to-integer/: README.md  greedy.kara  greedy.py
leetcode/1-100/13-roman-to-integer/bench/rayon/: Cargo.toml
leetcode/1-100/13-roman-to-integer/bench/rayon/src/: main.rs
leetcode/1-100/14-longest-common-prefix/: README.md  vertical.kara  vertical.py
leetcode/1-100/14-longest-common-prefix/bench/rayon/: Cargo.toml
leetcode/1-100/14-longest-common-prefix/bench/rayon/src/: main.rs
leetcode/1-100/15-3sum/: README.md  three_sum.kara  three_sum.py
leetcode/1-100/16-3sum-closest/: README.md  three_sum_closest.kara  three_sum_closest.py
leetcode/1-100/16-3sum-closest/bench/rayon/: Cargo.toml
leetcode/1-100/16-3sum-closest/bench/rayon/src/: main.rs
leetcode/1-100/17-letter-combinations-of-a-phone-number/bench/rayon/: Cargo.toml
leetcode/1-100/17-letter-combinations-of-a-phone-number/bench/rayon/src/: main.rs
leetcode/1-100/18-4sum/: README.md  (+2 more)
leetcode/1-100/18-4sum/bench/rayon/: Cargo.toml
leetcode/1-100/18-4sum/bench/rayon/src/: main.rs
leetcode/1-100/20-valid-parentheses/bench/rayon/: Cargo.toml
leetcode/1-100/20-valid-parentheses/bench/rayon/src/: main.rs
leetcode/1-100/22-generate-parentheses/bench/rayon/: Cargo.toml
leetcode/1-100/22-generate-parentheses/bench/rayon/src/: main.rs
leetcode/1-100/23-merge-k-sorted-lists/bench/rayon/: Cargo.toml
leetcode/1-100/23-merge-k-sorted-lists/bench/rayon/src/: main.rs
leetcode/1-100/28-find-the-index-of-the-first-occurrence-in-a-string/bench/rayon/: Cargo.toml
leetcode/1-100/28-find-the-index-of-the-first-occurrence-in-a-string/bench/rayon/src/: main.rs
leetcode/1-100/5-longest-palindromic-substring/bench/rayon/: Cargo.toml
leetcode/1-100/5-longest-palindromic-substring/bench/rayon/src/: main.rs
leetcode/1-100/6-zigzag-conversion/bench/rayon/: Cargo.toml
leetcode/1-100/6-zigzag-conversion/bench/rayon/src/: main.rs
leetcode/1-100/60-permutation-sequence/bench/rayon/: Cargo.toml
leetcode/1-100/60-permutation-sequence/bench/rayon-np/: Cargo.toml
leetcode/1-100/60-permutation-sequence/bench/rayon-np/src/: main.rs
leetcode/1-100/60-permutation-sequence/bench/rayon/src/: main.rs
leetcode/1-100/71-simplify-path/bench/rayon/: Cargo.toml
leetcode/1-100/71-simplify-path/bench/rayon/src/: main.rs
leetcode/1-100/75-sort-colors/bench/rayon/: Cargo.toml
leetcode/1-100/75-sort-colors/bench/rayon/src/: main.rs
leetcode/1-100/8-string-to-integer-atoi/bench/rayon/: Cargo.toml
leetcode/1-100/8-string-to-integer-atoi/bench/rayon/src/: main.rs
leetcode/1-100/86-partition-list/bench/rayon/: Cargo.toml
leetcode/1-100/86-partition-list/bench/rayon/src/: main.rs
leetcode/1-100/87-scramble-string/bench/rayon/: Cargo.toml
leetcode/1-100/87-scramble-string/bench/rayon/src/: main.rs
leetcode/1-100/9-palindrome-number/bench/rayon/: Cargo.toml
leetcode/1-100/9-palindrome-number/bench/rayon/src/: main.rs
leetcode/101-200/125-valid-palindrome/bench/rayon/: Cargo.toml
leetcode/101-200/125-valid-palindrome/bench/rayon/src/: main.rs
leetcode/101-200/133-clone-graph/bench/rayon/: Cargo.toml
leetcode/101-200/133-clone-graph/bench/rayon/src/: main.rs
leetcode/101-200/153-find-minimum-in-rotated-sorted-array/bench/rayon/: Cargo.toml
leetcode/101-200/153-find-minimum-in-rotated-sorted-array/bench/rayon/src/: main.rs
leetcode/101-200/171-excel-sheet-column-number/bench/rayon/: Cargo.toml
leetcode/101-200/171-excel-sheet-column-number/bench/rayon/src/: main.rs
leetcode/201-300/204-count-primes/bench/rayon/: Cargo.toml
leetcode/201-300/204-count-primes/bench/rayon/src/: main.rs
leetcode/301-400/394-decode-string/bench/rayon/: Cargo.toml
leetcode/301-400/394-decode-string/bench/rayon/src/: main.rs
leetcode/3601-3700/3629-minimum-jumps-to-reach-end-via-prime-teleportation/bench/rayon/: Cargo.toml
leetcode/3601-3700/3629-minimum-jumps-to-reach-end-via-prime-teleportation/bench/rayon/src/: main.rs
leetcode/701-800/722-remove-comments/bench/rayon/: Cargo.toml
leetcode/701-800/722-remove-comments/bench/rayon/src/: main.rs
oracle/parallel-or-not/: README.md  dataflow.kara  main.kara  tangled.kara
scripts/: bench-all.sh  bench-compare.py  bench-emit.py  bench-graph.py  bench-lib.sh  consolidate-bench.sh  inject-bench-readme.py  lint-katas.sh  render-png.sh
(+2797 files in other folders)
