# Rayon-parallel Rust mirror for the LeetCode #11 bench (par lane). The
# K=10M two-pointer max-area reduction is heavy enough that auto-par engages
# on the Kāra side; this is the hand-tuned-parallel comparator
# (`.into_par_iter()` + the rayon crate) vs Kāra's zero-parallel-code
# auto-par. See ../container.rs for the single-threaded seq-lane baseline.
[package]
name = "container_rayon"
version = "0.1.0"
edition = "2021"
[dependencies]
rayon = "1.10"
[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
