# Rayon-parallel Rust mirror for the LeetCode #16 bench (par lane). The
# K=1M sort + two-pointer 3Sum-Closest reduction is the same reduction
# karac's auto-par engages on; this is the hand-tuned-parallel comparator
# (`.into_par_iter()` + the rayon crate) vs Kāra's zero-parallel-code
# auto-par. See ../three_sum_closest.rs for the single-threaded seq-lane
# baseline.
[package]
name = "three_sum_closest_rayon"
version = "0.1.0"
edition = "2021"
[dependencies]
rayon = "1.10"
[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
