# Rayon-parallel Rust mirror for the LeetCode #17 bench (par lane). The
# K=100k letter-combinations reduction is parallelizable on the Kāra side
# (auto-par on `sum = sum + r.len()`); this is the hand-tuned-parallel
# comparator (`.into_par_iter()` + the rayon crate) vs Kāra's
# zero-parallel-code auto-par. See ../letter_combinations.rs for the
# single-threaded seq-lane baseline.
[package]
name = "letter_combinations_rayon"
version = "0.1.0"
edition = "2021"
[dependencies]
rayon = "1.10"
[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
