# Rayon-parallel Rust mirror for the LeetCode #18 bench (par lane, 4Sum). The
# K=1M sort + two-fix + two-pointer reduction is heavy enough that auto-par
# engages on the Kāra side; this is the hand-tuned-parallel comparator
# (`.into_par_iter()` + the rayon crate) vs Kāra's zero-parallel-code
# auto-par. See ../four_sum.rs for the single-threaded seq-lane baseline.
[package]
name = "four_sum_rayon"
version = "0.1.0"
edition = "2021"
[dependencies]
rayon = "1.10"
[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
