# Rayon-parallel Rust mirror for the LeetCode #20 bench (par lane). The
# K=500k bracket-validate count-reduction is heavy enough (allocator-bound
# build + linear stack pass per iter) that auto-par engages on the Kāra
# side; this is the hand-tuned-parallel comparator (`.into_par_iter()` +
# the rayon crate) vs Kāra's zero-parallel-code auto-par. See
# ../valid_parentheses.rs for the single-threaded seq-lane baseline.
[package]
name = "valid_parentheses_rayon"
version = "0.1.0"
edition = "2021"
[dependencies]
rayon = "1.10"
[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
