# Rayon-parallel Rust mirror for the LeetCode #22 bench (par lane). Each of
# the K=150 iters builds the full Catalan(10) parenthesis set and folds the
# emitted byte-lengths into the sink; this is the hand-tuned-parallel
# comparator (`.into_par_iter()` + the rayon crate) vs Kāra's default build.
# See ../backtracking.rs for the single-threaded seq-lane baseline.
[package]
name = "backtracking_rayon"
version = "0.1.0"
edition = "2021"
[dependencies]
rayon = "1.10"
[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
