# Rayon-parallel Rust mirror for the LeetCode #23 bench (par lane). The
# K=100k outer reduction over (build-k-lists, pairwise-merge, sum) is
# reduction-shaped, so auto-par engages on the Kāra side; this is the
# hand-tuned-parallel comparator (`.into_par_iter()` + the rayon crate)
# vs Kāra's zero-parallel-code auto-par. See ../divide_and_conquer.rs for
# the single-threaded seq-lane baseline.
[package]
name = "divide_and_conquer_rayon"
version = "0.1.0"
edition = "2021"
[dependencies]
rayon = "1.10"
[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
