# Rayon-parallel Rust mirror for the LeetCode #28 bench (par lane). The
# brute-force O(n·m) str_str per call is heavy enough that auto-par engages on
# the Kāra side (after the 2026-06-13 cost-model trip-count fix); this is the
# hand-tuned-parallel comparator (`.into_par_iter()` + the rayon crate) vs
# Kāra's zero-parallel-code auto-par. See ../brute_force.rs for the
# single-threaded seq-lane baseline.
[package]
name = "strstr_rayon"
version = "0.1.0"
edition = "2021"
[dependencies]
rayon = "1.10"
[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
