# Rayon-parallel Rust mirror for the LeetCode #5 bench (par lane). The K=100
# O(n²) expand-around-center reduction auto-parallelizes on the Kāra side; this
# is the hand-tuned-parallel comparator (`.into_par_iter()` + the rayon crate) vs
# Kāra's zero-parallel-code auto-par. See ../expand_around_center.rs for the
# single-threaded seq-lane baseline.
[package]
name = "lps_rayon"
version = "0.1.0"
edition = "2021"
[dependencies]
rayon = "1.10"
[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
