# Rayon-parallel Rust mirror for the LeetCode #6 bench (par lane). The
# K=10K outer reduction over `convert_off` is heavy enough (one push per
# input char + one flatten copy = 2N ops/call at N=10K) that auto-par
# engages on the Kāra side; this is the hand-tuned-parallel comparator
# (`.into_par_iter()` + the rayon crate) vs Kāra's zero-parallel-code
# auto-par. See ../row_buffers.rs for the single-threaded seq-lane baseline.
[package]
name = "row_buffers_rayon"
version = "0.1.0"
edition = "2021"
[dependencies]
rayon = "1.10"
[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
