# Rayon-parallel Rust mirror for the LeetCode #60 bench (par lane, NEXT-PERM
# solver). The K=333 next_permutation-iterate + checksum reduction engages
# auto-par on the Kāra side; this is the hand-tuned-parallel comparator
# (`.into_par_iter()` + the rayon crate). See
# ../permutation_sequence_nextperm.rs for the single-threaded seq baseline.
[package]
name = "permutation_sequence_nextperm_rayon"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.10"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
