# Rayon-parallel Rust mirror for the LeetCode #60 bench (par lane, FACTORIAL
# solver). The K=500k factorial-generate + checksum reduction engages auto-par
# on the Kāra side; this is the hand-tuned-parallel comparator
# (`.into_par_iter()` + the rayon crate) vs Kāra's zero-parallel-code auto-par.
# See ../permutation_sequence.rs for the single-threaded seq-lane baseline.
[package]
name = "permutation_sequence_rayon"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.10"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
