# Rayon-parallel Rust mirror for the LeetCode #86 bench (par lane). The batch of
# K=170000 independent partitions is allocation-bound (a fresh M-node list per
# iteration), so this hand-tuned comparator (`.into_par_iter()` + rayon) scales
# sublinearly just like the others — the point is auto-par vs hand-tuned on equal,
# malloc-heavy footing. Each rayon task builds its own Rc<RefCell<>> lists locally
# (Rc never crosses a thread), matching the seq mirror's per-node RC overhead.
# See ../partition_list.rs for the single-threaded seq-lane baseline.
[package]
name = "partition_list_rayon"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.10"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
