# Rayon-parallel Rust mirror for the LeetCode #87 bench (par lane). The batch of
# K=60000 independent memoized scramble decisions is compute-bound (the memo is the
# only allocation), so it parallel-scales well; this is the hand-tuned comparator
# (`.into_par_iter()` + rayon) vs Kāra's zero-parallel-code auto-par.
# See ../scramble_string.rs for the single-threaded seq-lane baseline.
[package]
name = "scramble_string_rayon"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.10"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
