# Rayon-parallel Rust mirror for the LeetCode #125 bench. Separate Cargo
# project (vs the single-file `rustc -O valid_palindrome.rs`) because rayon is a
# third-party crate. Par-lane comparator: what the workload looks like when a
# Rust programmer *does* reach for parallelism — `.into_par_iter()` over the
# ITERS reduction, plus the `rayon` dependency — versus Kāra's auto-par, which
# parallelizes the same reduction with NO parallel code at all.

[package]
name = "vp_rayon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vp_rayon"
path = "src/main.rs"

[dependencies]
rayon = "1.10"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
