# Rayon-parallel Rust mirror for the LeetCode #133 bench (par lane). The K=500
# BFS clone reduction auto-parallelizes on the Kāra side; this is the hand-tuned-
# parallel comparator (rayon pool, per-worker thread-local graph). See
# ../clone_bfs.rs for the single-threaded seq-lane baseline and
# ../clone_bfs_par.kara for Kāra's in-language hand-written `par {}` variant.
[package]
name = "clone_rayon"
version = "0.1.0"
edition = "2021"
[dependencies]
rayon = "1.10"
[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
