# Rayon-parallel Rust mirror for the LeetCode #153 bench (par lane). The
# K=2_000_000 find_min reduction auto-parallelizes on the Kāra side; this is the
# hand-tuned-parallel comparator (`.into_par_iter()` + the rayon crate) vs Kāra's
# zero-parallel-code auto-par. See ../binary_search.rs for the single-threaded
# seq-lane baseline.
[package]
name = "findmin_rayon"
version = "0.1.0"
edition = "2021"
[dependencies]
rayon = "1.10"
[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
