# Rayon-parallel Rust mirror for the LeetCode #171 bench (par lane). Separate
# Cargo project because rayon is a third-party crate. This is the par-lane
# comparator: `.into_par_iter()` over the K_ITERS reduction + the `rayon` crate —
# what a Rust programmer writes when they reach for parallelism — versus Kāra's
# auto-par, which parallelizes the same reduction with NO parallel code. See
# ../column_number.rs for the single-threaded seq-lane baseline.

[package]
name = "column_number_rayon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "column_number_rayon"
path = "src/main.rs"

[dependencies]
rayon = "1.10"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
