# Rayon-parallel Rust mirror for the LeetCode 204 bench. Separate Cargo
# project (vs the single-file `rustc -O count.rs`) because rayon is a
# third-party crate — adding it gives the bench comparison a row showing
# what the workload looks like when a Rust programmer *does* reach for
# parallelism, instead of only "auto-par Kara vs idiomatic single-
# threaded Rust." See ../count.rs for the single-threaded baseline.

[package]
name = "count_rayon"
version = "0.1.0"
edition = "2024"

[dependencies]
rayon = "1.10"

[profile.release]
# Match the single-file `rustc -O` baseline's optimization level —
# rustc -O = -C opt-level=2; cargo release defaults already use 3, but
# pin it explicitly here so the comparison framing is honest.
opt-level = 3
codegen-units = 1
lto = "fat"
