# Rayon-parallel Rust mirror for the LeetCode #394 bench. Separate Cargo
# project (vs the single-file `rustc -O decode_string.rs`) because rayon is a
# third-party crate. This is the par-lane comparator: what the workload looks
# like when a Rust programmer *does* reach for parallelism — `.into_par_iter()`
# over the ITERS decode reduction, plus the `rayon` dependency — versus Kāra's
# auto-par, which parallelizes the same reduction with NO parallel code at all.
# See ../decode_string.rs for the single-threaded seq-lane baseline.

[package]
name = "decode_rayon"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.10"

[profile.release]
# Pin to the single-file `rustc -O` baseline's optimization so the par-lane
# comparison is honest (rustc -O = opt-level 2; cargo release defaults to 3 —
# pin 3 + fat LTO + 1 codegen unit explicitly, matching the #204 par mirror).
opt-level = 3
codegen-units = 1
lto = "fat"
